# AriaDeck

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml  release.yml
apps/ariadeck-desktop/: Cargo.toml  build.rs
apps/ariadeck-desktop/assets/: tray_icon.rgba
apps/ariadeck-desktop/src/: instance.rs  main.rs  metadata.rs  platform.rs  workspace.rs
apps/ariadeck-desktop/src/workspace/: diagnostics.rs  engine_setup.rs  mapping.rs  mod.rs  ops.rs  settings_bridge.rs  tests.rs  tracker_list.rs
crates/ariadeck-application/: Cargo.toml
crates/ariadeck-application/src/: commands.rs  history.rs  lib.rs  ports.rs  store.rs  sync.rs  view.rs
crates/ariadeck-domain/: Cargo.toml
crates/ariadeck-domain/src/: category_route.rs  engine.rs  ids.rs  lib.rs  privacy.rs  task.rs  tracker_list.rs  transfer.rs
crates/ariadeck-engine/: Cargo.toml
crates/ariadeck-engine/src/: cores.rs  lib.rs
crates/ariadeck-history/: Cargo.toml
crates/ariadeck-history/src/: lib.rs
crates/ariadeck-i18n/: Cargo.toml
crates/ariadeck-i18n/i18n/en/: app.ftl  chrome.ftl  dialogs.ftl  errors.ftl  notices.ftl  settings.ftl
crates/ariadeck-i18n/i18n/zh-CN/: app.ftl  chrome.ftl  dialogs.ftl  errors.ftl  notices.ftl  settings.ftl
crates/ariadeck-i18n/src/: lib.rs
crates/ariadeck-rpc/: Cargo.toml
crates/ariadeck-rpc/src/: auth.rs  client.rs  error.rs  lib.rs  models.rs  notification.rs  protocol.rs  sync.rs
crates/ariadeck-rpc/src/transport/: mod.rs  websocket.rs
crates/ariadeck-rpc/tests/: live_aria2.rs
crates/ariadeck-settings/: Cargo.toml
crates/ariadeck-settings/src/: lib.rs  profile_env.rs  system_proxy.rs
crates/ariadeck-telemetry/: Cargo.toml
crates/ariadeck-telemetry/src/: lib.rs
crates/ariadeck-ui/: Cargo.toml
crates/ariadeck-ui/src/: accessibility.rs  actions.rs  assets.rs  components.rs  lib.rs  model.rs  search_input.rs  shell.rs  theme.rs
crates/ariadeck-ui/src/shell/: activity.rs  chrome.rs  commands.rs  details.rs  dialogs_add.rs  helpers.rs  mod.rs  profiles.rs  settings.rs  task_list.rs  tests.rs
docs/: design.md  i18n.md  implementation-progress.md  post-mvp-progress.md  project-context.md  release.md  roadmap.md
packaging/windows/: AriaDeck.iss
scripts/: gen_third_party_notices.py  package-windows-installer.ps1  package-windows-portable.ps1
