[workspace]
resolver = "3"
members = [
    "apps/ariadeck-desktop",
    "crates/ariadeck-application",
    "crates/ariadeck-domain",
    "crates/ariadeck-engine",
    "crates/ariadeck-history",
    "crates/ariadeck-i18n",
    "crates/ariadeck-rpc",
    "crates/ariadeck-settings",
    "crates/ariadeck-telemetry",
    "crates/ariadeck-ui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
authors = ["AriaDeck contributors"]
license = "MIT"

[workspace.dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
bitflags = { version = "2.10.0", features = ["serde"] }
data-encoding = "2.11.0"
rust-embed = "8.11.0"
fluent-bundle = "0.16.0"
futures = "0.3.31"
futures-util = "0.3.31"
gpui = { git = "https://github.com/zed-industries/zed.git", rev = "952d712dac48a4af2c54fb22c82d82a9d69b72d4" }
gpui_platform = { git = "https://github.com/zed-industries/zed.git", rev = "952d712dac48a4af2c54fb22c82d82a9d69b72d4" }
image = { version = "0.25.10", default-features = false }
interprocess = { version = "2.4.2", features = ["tokio"] }
keyring = "4.1.5"
lava_torrent = "0.11.1"
notify-rust = "4.18.0"
quick-xml = "0.41.0"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls-native-roots"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
secrecy = "0.8.0"
sha2 = "0.11.0"
sys-locale = "0.3.2"
sysinfo = "0.31.4"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.28.0", default-features = false, features = ["connect", "handshake", "rustls-tls-native-roots"] }
trash = "5.2.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
tray-icon = { version = "0.24.1", default-features = false, features = ["gtk"] }
url = { version = "2.5.7", features = ["serde"] }
unic-langid = { version = "0.9.6", features = ["macros"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
winreg = "0.55"
zip = { version = "4.6.1", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
dbg_macro = "deny"
todo = "deny"
unwrap_used = "warn"
