[package]
name = "ariadeck-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
ariadeck-application = { path = "../../crates/ariadeck-application" }
ariadeck-domain = { path = "../../crates/ariadeck-domain" }
ariadeck-engine = { path = "../../crates/ariadeck-engine" }
ariadeck-rpc = { path = "../../crates/ariadeck-rpc" }
ariadeck-settings = { path = "../../crates/ariadeck-settings" }
ariadeck-telemetry = { path = "../../crates/ariadeck-telemetry" }
ariadeck-ui = { path = "../../crates/ariadeck-ui" }
data-encoding.workspace = true
gpui.workspace = true
gpui_platform.workspace = true
secrecy.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
async-trait.workspace = true
futures.workspace = true
tempfile.workspace = true

[lints]
workspace = true
