[package]
name = "ariadeck-application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
ariadeck-domain = { path = "../ariadeck-domain" }
secrecy.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
futures.workspace = true

[lints]
workspace = true
