[package]
name = "ariadeck-history"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ariadeck-application = { path = "../ariadeck-application" }
ariadeck-domain = { path = "../ariadeck-domain" }
rusqlite.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
