[package]
name = "ariadeck-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
ariadeck-application = { path = "../ariadeck-application" }
ariadeck-domain = { path = "../ariadeck-domain" }
async-trait.workspace = true
base64.workspace = true
futures-util.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
rcgen = "0.14.5"
tempfile.workspace = true
tokio-rustls = { version = "0.26.4", default-features = false, features = ["logging", "ring", "tls12"] }
uuid.workspace = true

[lints]
workspace = true
