[package]
name = "ariadeck-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
gpui.workspace = true
rust-embed.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }

[lints]
workspace = true
