[package]
name = "ariadeck-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ariadeck-domain = { path = "../ariadeck-domain" }
ariadeck-i18n = { path = "../ariadeck-i18n" }
gpui.workspace = true
rust-embed.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }

[lints]
workspace = true
